--- a/html/discover.html
+++ b/html/discover.html
@@ -12,7 +12,21 @@
         <link rel="stylesheet" href="../css/style.css" />
         <link rel="stylesheet" href="../css/discover.css" />
     </head>
-    <body>
-        
+    <body class="container full-height-grow">
+        <!--! Header Section -->
+        <header class="main-header">
+            <!--// Brand Logo -->
+            <a href="../index.html" class="brand-logo">
+                <img src="../images/logo.png" alt="Logo" />
+                <div class="brand-logo-name">Soundwave</div>
+            </a>
+            <!--// Navigation -->
+            <nav class="main-nav">
+                <ul>
+                    <li><a href="/">Discover</a></li>
+                    <li><a href="./contact.html" target="new">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
     </body>
 </html>
