landing page done

--- a/index.html
+++ b/index.html
@@ -23,10 +23,35 @@
             <!--// Navigation -->
             <nav class="main-nav">
                 <ul>
-                    <li><a href="./html/discover.html" target="new">Discover</a></li>
-                    <li><a href="./html/contact.html" target="new">Contact</a></li>
+                    <li>
+                        <a href="./html/discover.html" target="new">Discover</a>
+                    </li>
+                    <li>
+                        <a href="./html/contact.html" target="new">Contact</a>
+                    </li>
                 </ul>
             </nav>
         </header>
+
+        <!--! Main Section -->
+        <section class="home-main-section">
+            <!--// Lady img -->
+            <div class="img-wrapper">
+                <div class="lady-img"></div>
+            </div>
+
+            <!--// CTA -->
+            <div class="cta">
+                <h1 class="title">Feel The Music</h1>
+                <span class="subtitle">
+                    Stream over 20 thousand songs with one click
+                </span>
+                <a href="./html/contact.html" class="btn">Join Now</a>
+            </div>
+        </section>
+
+        <div class="home-page-circle-1"></div>
+        <div class="home-page-circle-2"></div>
+        <div class="home-page-circle-3"></div>
     </body>
 </html>
