discover page done

--- a/html/contact.html
+++ b/html/contact.html
@@ -12,7 +12,57 @@
         <link rel="stylesheet" href="../css/style.css" />
         <link rel="stylesheet" href="../css/contact.css" />
     </head>
-    <body>
-        
+    <body class="full-height-grow">
+        <div class="container full-height-grow">
+            <!--! Header Section -->
+            <header class="main-header">
+                <!--// Brand Logo -->
+                <a href="../index.html" class="brand-logo">
+                    <img src="../images/logo.png" alt="Logo" />
+                    <div class="brand-logo-name">Soundwave</div>
+                </a>
+                <!--// Navigation -->
+                <nav class="main-nav">
+                    <ul>
+                        <li><a href="./discover.html">Discover</a></li>
+                        <li>
+                            <a href="./" target="new">Contact</a>
+                        </li>
+                    </ul>
+                </nav>
+            </header>
+
+            <!--! Main Section -->
+            <section></section>
+        </div>
+
+        <!--! Footer Section -->
+        <div class="main-footer">
+            <div class="container">
+                <nav class="footer-nav">
+                    <ul>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </nav>
+
+                <nav class="footer-nav">
+                    <ul>
+                        <li>
+                            <a href="#" class="social-link">
+                                <img src="../images/twitter.svg" />
+                                Twitter
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="social-link">
+                                <img src="../images/facebook.svg" />
+                                Facebook
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
     </body>
 </html>
