--- a/html/discover.html
+++ b/html/discover.html
@@ -12,21 +12,79 @@
         <link rel="stylesheet" href="../css/style.css" />
         <link rel="stylesheet" href="../css/discover.css" />
     </head>
-    <body class="container full-height-grow">
-        <!--! Header Section -->
-        <header class="main-header">
-            <!--// Brand Logo -->
-            <a href="../index.html" class="brand-logo">
-                <img src="../images/logo.png" alt="Logo" />
-                <div class="brand-logo-name">Soundwave</div>
-            </a>
-            <!--// Navigation -->
-            <nav class="main-nav">
-                <ul>
-                    <li><a href="/">Discover</a></li>
-                    <li><a href="./contact.html" target="new">Contact</a></li>
-                </ul>
-            </nav>
-        </header>
+    <body class="full-height-grow">
+        <div class="container full-height-grow">
+            <!--! Header Section -->
+            <header class="main-header">
+                <!--// Brand Logo -->
+                <a href="../index.html" class="brand-logo">
+                    <img src="../images/logo.png" alt="Logo" />
+                    <div class="brand-logo-name">Soundwave</div>
+                </a>
+                <!--// Navigation -->
+                <nav class="main-nav">
+                    <ul>
+                        <li><a href="/">Discover</a></li>
+                        <li>
+                            <a href="./contact.html" target="new">Contact</a>
+                        </li>
+                    </ul>
+                </nav>
+            </header>
+
+            <!--! Main Section -->
+            <section class="discover-main-section">
+                <!--// CTA -->
+                <div class="cta">
+                    <h1 class="title">Discover new music</h1>
+                    <div class="icon-section">
+                        <div class="icon">
+                            <img src="../images/microphone.svg" /> Charts
+                        </div>
+                        <div class="icon">
+                            <img src="../images/albums.svg" /> Albums
+                        </div>
+                        <div class="icon">
+                            <img src="../images/more.svg" /> More
+                        </div>
+                    </div>
+                    <div>
+                        By joining you can benefit by listening to the latest
+                        albums released
+                    </div>
+                </div>
+                <!--// Cover Img -->
+                <img src="../images/covers.jpg" class="cover-img"/>
+            </section>
+        </div>
+
+        <!--! Footer Section -->
+        <div class="main-footer">
+            <div class="container">
+                <nav class="footer-nav">
+                    <ul>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </nav>
+
+                <nav class="footer-nav">
+                    <ul>
+                        <li>
+                            <a href="#" class="social-link">
+                                <img src="../images/twitter.svg" />
+                                Twitter
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="social-link">
+                                <img src="../images/facebook.svg" />
+                                Facebook
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
     </body>
 </html>
