contact page done

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!--! Header Section -->
         <header class="main-header">
             <!--// Brand Logo -->
-            <a href="/" class="brand-logo">
+            <a href="#" class="brand-logo">
                 <img src="./images/logo.png" alt="Logo" />
                 <div class="brand-logo-name">Soundwave</div>
             </a>
@@ -50,8 +50,9 @@
             </div>
         </section>
 
-        <div class="home-page-circle-1"></div>
-        <div class="home-page-circle-2"></div>
-        <div class="home-page-circle-3"></div>
+        <!--! Circles -->
+        <div class="circle-1"></div>
+        <div class="circle-2"></div>
+        <div class="circle-3"></div>
     </body>
 </html>
