--- a/html/contact.html
+++ b/html/contact.html
@@ -26,15 +26,44 @@
                     <ul>
                         <li><a href="./discover.html">Discover</a></li>
                         <li>
-                            <a href="./" target="new">Contact</a>
+                            <a href="#" target="new">Contact</a>
                         </li>
                     </ul>
                 </nav>
             </header>
 
             <!--! Main Section -->
-            <section></section>
+            <section class="join-main-section">
+                <!--// Text -->
+                <h1 class="join-text">
+                    Join the
+                    <span style="color: #bc3a80; font-size: 1.8em;">fun.</span>
+                </h1>
+
+                <!--// Form section-->
+                <form class="join-form">
+                    <div class="input-group">
+                        <label for="name">Name:</label>
+                        <input type="text" id="name" />
+                    </div>
+                    <div class="input-group">
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" />
+                    </div>
+                    <div class="input-group">
+                        <label for="pass">Password:</label>
+                        <input type="password" id pass />
+                    </div>
+                    <div class="input-group">
+                        <button type="submit" class="btn">Join Now</button>
+                    </div>
+                </form>
+            </section>
         </div>
+
+        <!--! Circles -->
+        <div class="circle-1"></div>
+        <div class="circle-2"></div>
 
         <!--! Footer Section -->
         <div class="main-footer">
