--- a/html/discover.html
+++ b/html/discover.html
@@ -24,7 +24,7 @@
                 <!--// Navigation -->
                 <nav class="main-nav">
                     <ul>
-                        <li><a href="/">Discover</a></li>
+                        <li><a href="#">Discover</a></li>
                         <li>
                             <a href="./contact.html" target="new">Contact</a>
                         </li>
