arranged file system

--- a/assets/html/discover.html
+++ b/assets/html/discover.html
@@ -6,64 +6,57 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <!-- !Title -->
-        <title>Soundwave | Contact</title>
+        <title>Soundwave | Discover</title>
 
         <!-- !CSS file -->
         <link rel="stylesheet" href="../css/style.css" />
-        <link rel="stylesheet" href="../css/contact.css" />
+        <link rel="stylesheet" href="../css/discover.css" />
     </head>
     <body class="full-height-grow">
         <div class="container full-height-grow">
             <!--! Header Section -->
             <header class="main-header">
                 <!--// Brand Logo -->
-                <a href="../index.html" class="brand-logo">
+                <a href="../../index.html" class="brand-logo">
                     <img src="../images/logo.png" alt="Logo" />
                     <div class="brand-logo-name">Soundwave</div>
                 </a>
                 <!--// Navigation -->
                 <nav class="main-nav">
                     <ul>
-                        <li><a href="./discover.html">Discover</a></li>
+                        <li><a href="#">Discover</a></li>
                         <li>
-                            <a href="#" target="new">Contact</a>
+                            <a href="./contact.html" target="new">Contact</a>
                         </li>
                     </ul>
                 </nav>
             </header>
 
             <!--! Main Section -->
-            <section class="join-main-section">
-                <!--// Text -->
-                <h1 class="join-text">
-                    Join the
-                    <span style="color: #bc3a80; font-size: 1.8em;">fun.</span>
-                </h1>
-
-                <!--// Form section-->
-                <form class="join-form">
-                    <div class="input-group">
-                        <label for="name">Name:</label>
-                        <input type="text" id="name" />
+            <section class="discover-main-section">
+                <!--// CTA -->
+                <div class="cta">
+                    <h1 class="title">Discover new music</h1>
+                    <div class="icon-section">
+                        <div class="icon">
+                            <img src="../images/microphone.svg" /> Charts
+                        </div>
+                        <div class="icon">
+                            <img src="../images/albums.svg" /> Albums
+                        </div>
+                        <div class="icon">
+                            <img src="../images/more.svg" /> More
+                        </div>
                     </div>
-                    <div class="input-group">
-                        <label for="email">Email:</label>
-                        <input type="email" id="email" />
+                    <div>
+                        By joining you can benefit by listening to the latest
+                        albums released
                     </div>
-                    <div class="input-group">
-                        <label for="pass">Password:</label>
-                        <input type="password" id pass />
-                    </div>
-                    <div class="input-group">
-                        <button type="submit" class="btn">Join Now</button>
-                    </div>
-                </form>
+                </div>
+                <!--// Cover Img -->
+                <img src="../images/covers.jpg" class="cover-img"/>
             </section>
         </div>
-
-        <!--! Circles -->
-        <div class="circle-1"></div>
-        <div class="circle-2"></div>
 
         <!--! Footer Section -->
         <div class="main-footer">
