--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
         <title>Soundwave</title>
 
         <!--! CSS file -->
-        <link rel="stylesheet" href="css/style.css" />
-        <link rel="stylesheet" href="css/index.css" />
+        <link rel="stylesheet" href="assets/css/style.css" />
+        <link rel="stylesheet" href="assets/css/index.css" />
     </head>
     <body class="container full-height-grow">
         <!--! Header Section -->
         <header class="main-header">
             <!--// Brand Logo -->
             <a href="#" class="brand-logo">
-                <img src="./images/logo.png" alt="Logo" />
+                <img src="assets/images/logo.png" alt="Logo" />
                 <div class="brand-logo-name">Soundwave</div>
             </a>
             <!--// Navigation -->
             <nav class="main-nav">
                 <ul>
                     <li>
-                        <a href="./html/discover.html" target="new">Discover</a>
+                        <a href="assets/html/discover.html" target="new">Discover</a>
                     </li>
                     <li>
-                        <a href="./html/contact.html" target="new">Contact</a>
+                        <a href="assets/html/contact.html" target="new">Contact</a>
                     </li>
                 </ul>
             </nav>
@@ -46,7 +46,7 @@
                 <span class="subtitle">
                     Stream over 20 thousand songs with one click
                 </span>
-                <a href="./html/contact.html" class="btn">Join Now</a>
+                <a href="assets/html/contact.html" class="btn">Join Now</a>
             </div>
         </section>
 
